--- a/client/index.html
+++ b/client/index.html
@@ -9,14 +9,15 @@
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
-
+    <!-- JS -->
+    <script src="js/index.js"></script>
 </head>
 <body>
     <main class ="p-4 d-flex flex-column align-items-center">
+        <div style="width: 40vw;">
+            <img src="img/login.png" style="width:40vw; height: 20vw;"  alt="login ">
+        </div>
         <div class="card" style="width: 40vw;">
-            <div style="width: 40vw;">
-                <img src="img/login.png" style="width:40vw;"  alt="login ">
-            </div>
             <div class="card-body">
                 <form method="post" class="pb-4">
                     <h3 class="text-center">Login</h3>
@@ -27,7 +28,7 @@
                     <input type="password" class="form-control" id="password" name="password" placeholder="Write your password" required>
                     <br>
                     <div class="p-4 d-flex flex-row justify-content-around">
-                        <button type="button" class="btn btn-primary">Login</button>
+                        <button type="button" class="btn btn-primary" onclick="send()">Login</button>
                     </div>
                 </form>
             </div>
