--- a/client/main.html
+++ b/client/main.html
@@ -3,14 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Book</title>
     <!-- jQuery -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>   
+    <!-- Fontawesome -->
+    <script src="https://kit.fontawesome.com/9996e5683c.js" crossorigin="anonymous"></script>
     <!-- Bootstrap -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"/>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
     <!-- SweetAlert2 -->
     <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+    <script src="js/main.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-ligth bg-light">
@@ -27,7 +31,7 @@
             <thead>
                 <tr>
                     <th>ID</th>
-                    <th>Name</th>
+                    <th>Name<span style="cursor: pointer;" class="fas fa-sort" id="order_name"></span></th>
                     <th>Last Name</th>
                     <th>Address</th>
                     <th>Phone Number</th>
