access to contact detail screen

--- a/client/main.html
+++ b/client/main.html
@@ -24,7 +24,7 @@
     </nav>
     <main class="p-4 d-flex flex-column">
         <div class="d-flex flex-row justify-content-between">
-            <button class="btn btn-primary m-2">New contact</button>
+            <button class="btn btn-primary m-2" onclick="create_contact()">New contact</button>
             <input type="text" id="search" class="form-control w-25" placeholder="Contact's name">
         </div>
         <table class="table table-striped table-hover" id="table">
