--- a/client/profile.html
+++ b/client/profile.html
@@ -11,6 +11,8 @@
      <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"></script>
      <!-- SweetAlert2 -->
      <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+
+     <script src="js/profile.js"></script>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-ligth bg-light">
