--- a/client/profile.html
+++ b/client/profile.html
@@ -40,7 +40,7 @@
                 <input type="text" class="form-control" id="phone_number" name="phone_number" required/><br>
 
                 <div class="p-4 d-flex flex-row justify-content-around">
-                    <button class="btn btn-success" id="button"></button>
+                    <button class="btn btn-success" id="button" onclick="operate()"></button>
                 </div>
             </div>
         </div>
